# main_project

./: .env  .flake8  .gitignore  README.md  pyproject.toml
data/: test_transaction.csv
logs/: log.txt
src/: decorators.py  external_api.py  generators.py  generators_data.py  main.py  masks.py  processing.py  reader.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_reader.py  test_utils.py  test_widget.py
tests/logs/: log.txt
